Fix spacing in blog post content and enhance responsiveness in style.css

--- a/style.css
+++ b/style.css
@@ -1100,16 +1100,15 @@ footer ul {
     box-sizing: border-box;
 }
 
-.blog-post-content {
-    width: 1100px; 
-    display: flex; 
+.blog-post-content { 
+    max-width: 1100px;
     flex-direction: column;
     justify-self: center;
     align-items: center;
     background-color: white; 
     border-radius: 1rem;
     padding: 3rem 6rem;
-    margin-top: -10rem;
+    margin-top: -15rem;
 }
 
 .blog-post-content-top {
@@ -1139,4 +1138,24 @@ footer ul {
 .blog-post-content img {
     width: 100%; 
     height: auto; 
+}
+
+/* Blog post responsiv*/ 
+@media only screen and (max-width: 1300px) {
+    .blog-post-content {
+        margin: -15rem 2rem 0 2rem;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    .blog-post-content {
+        width: 95%;
+        padding: 3rem 2.5rem;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .blog-post-content {
+        padding: 3rem 1rem;
+    }
 }
